--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,6 +8,9 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <!-- Google Fonts     -->
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
+    
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/styles.css">
 
