--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -16,8 +16,10 @@
 
     <title>Journey</title>
   </head>
-  <body>
+  <body onresize="setDimensions()">
     <div id="root" class="height-100"></div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
