--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -16,7 +16,8 @@
 
     <title>Journey</title>
   </head>
-  <body onresize="setDimensions()">
+  <!-- onresize="setDimensions()" -->
+  <body  class="disableScroll">
     <div id="root" class="height-100"></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
