--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -17,7 +17,7 @@
     <title>Journey</title>
   </head>
   <!-- onresize="setDimensions()" -->
-  <body  class="disableScroll">
+  <body  class="disableScroll" onresize="setDimensions()">
     <div id="root" class="height-100"></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
